src/tests/code/shaders/valid/color-string-default.frag
// { type: "color", label: "Magenta", default: "rgb(255, 0, 255)" }
uniform vec4 magenta;

void main() {
    gl_FragColor = magenta;
}
